drafted contrast discussion, creative cognition discussion

--- a/Manuscripts/cog-psych/cogpsych.tex
+++ b/Manuscripts/cog-psych/cogpsych.tex
@@ -523,31 +523,41 @@ As in the more traditional model evaluation procedure described above, PACKER pr
 
 The creative generation of novel concepts is an intriguing yet understudied topic in cognitive science. While the bulk of prior research on the topic has focused on the classic finding that generated concepts tend to be distributionally similar to known concepts, there has been little work addressing the role of contrast in creative generation: how is it that people are able to create something {\em different} from what is already known? This issue is of fundamental importance: in order to successfully generate something new, it must be different from what is known. We developed a novel, exemplar-based model, PACKER, which formally specifies the role of contrast in generation. The model proposes that categories are represented as exemplars in a multidimensional psychological space, and generation is constrained both by within-category and between-category similarity: exemplars belonging to the same category should be similar to one another, and exemplars belonging to different categories should not be similar to one another. 
 
-In addition to an analysis of published data \citep[][Experiment 3]{jern2013probabilistic}, we reported two experiments demonstrating systematic effects of category contrast in creative generation: members of participant-generated categories tended to be highly dissimilar from members of previously-learned categories, and were usually more similar to one another than to members of other categories. Finally, we conducted simulations comparing PACKER's account of our results to that of a ``copy-and-tweak'' model (realized as a variant of PACKER with no sensitivity to category contrast), and a hierarchical sampling model designed to explain the classic distributional similarity effect. In all simulations, we found that PACKER's sensitivity to contrast considerably enhanced the models account of generation.
+In addition to an analysis of published data \citep[][Experiment 3]{jern2013probabilistic}, we reported two experiments demonstrating systematic effects of category contrast in creative generation: members of participant-generated categories tended to be highly dissimilar from members of previously-learned categories, and were usually more similar to one another than to members of other categories. Likewise, we observed broad interdependence between the distributional structure (feature variance, correlation) and physical instantiation (location within the domain space) of generated categories: In Experiment 2, we found that the unoccupied regions of the domain influenced the distributional structure of categories, and in both Experiments we observed that participants generated categories that were oriented to increase contrast with what was already known. 
 
-The PACKER model bridges two gaps in the literature. First, it provides a quantitative theory of the role of contrast in creative generation, a topic more or less overlooked by previous work. The lack of attention to this issue is likely due to the underconstrained notion of what it means for two concepts to be ``different''. In PACKER, this notion is interpreted using the theory of similarity employed by the exemplar view of categorization \citep{medin1978context,brooks1978nonanalytic,nosofsky1984choice,nosofsky1986attention}. This theory of similarity, tracing its foundations to classic research in stimulus generalization \citep{attneave1950,shepard1957stimulus,shepard1987toward}, has had broad influence in many fields within cognitive science. Thus, beyond providing a formal specification of category contrast, PACKER also aligns the relatively understudied topic of creative generation more closely with the well-developed literature on human categorization. The success of the PACKER model indicates that core theories from the categorization literature may offer a strong account of how people generate new concepts. 
+Finally, we conducted simulations comparing PACKER's account of our results to that of a ``copy-and-tweak'' model (realized as a variant of PACKER with no sensitivity to category contrast), and a hierarchical sampling model designed to explain the classic distributional similarity effect. In all simulations, we found that PACKER's sensitivity to contrast considerably enhanced the models account of generation. Further, by measuring PACKER's fit as a function of its prioritization of within- and between-category similarity, we observed that considering either constraint exclusively results in a relatively low-quality account. Instead, PACKER's best results were obtained when both constraints are considered, indicating that human learners do not generate novel concepts exclusively on the basis of within-category similarity or between class-contrast. This finding mirrors our behavioral results: it is clear that both constraints influence creative generation. 
 
-The success of PACKER yields reveals keys insights about the nature of creative generation. First, by measuring PACKER's fit as a function of its prioritization of within- and between-category similarity, we observed that considering either constraint exclusively results in a relatively low-quality account. Instead, PACKER's best results were obtained when both constraints are considered, indicating that human learners do not generate novel concepts exclusively on the basis of within-category similarity or between class-contrast. This finding mirrors our behavioral results: it is clear that both constraints influence creative generation. 
+\subsection{Similarity and Contrast in Cognition}
+\jlanote{More broad perspective of how this fits with categorization more broadly. Similar style model for explaining language/perceptual (phonemes and color) categories. Also, you should check on studies of how contrast affects categorization more broadly (i think there's some work on that).}
 
-This finding is extended by our observation of the broad interdependence between the distributional structure (feature variance, correlation) and physical instantiation (location within the domain space) of generated categories. In Experiment 2, we found that the unoccupied regions of the domain influenced the distributional structure of categories, and in Experiments 1 and 2 we observed that generated categories assume different distributional structures depending on how they contrast with known categories. This interdependence is straightforwardly explained under PACKER's dual-constraint proposal: after first establishing a location for their generated category, participants distribute exemplars in order to minimize between-category similarity while not drastically decreasing within-category similarity. 
+The proposal that category contrast is a primary constraint in creative generation is, in some ways, entirely commonsense. In order to successful create something \textit{new}, it must be different from what is known. Beyond its role in creative generation, category contrast is also of fundamental importance in categorization more broadly: All other factors held constant, new categories are easier to learn if they are dissimilar to members of other categories, and knowledge of highly distinct categories is applied more accurately than that of ill-defined categories\footnote{\nbcnote{This is an uncontroversial claim but we should have some cites. I just can't think of a super appropriate one right now...}}. Likewise, the act of forming category representations affects similarity judgments about category members and nonmembers, with category members being viewed as more similar to one another than members of other categories \citep{goldstone1994influences,goldstone2001altering} .
 
-However, PACKER does not provide a full account of what is known about category generation. Most notably, in this paper we have not evaluated the model's ability to explain the classic finding that generated categories tend to share distributional commonalities with previously learned categories \citep[see][]{jern2013probabilistic,ward1994structured,ward1995s,ward2002role,smith1993constraining,marsh1999inadvertent}. While we successfully replicated this effect in Experiment 1, we also found that its influence was limited in comparison to the fundamental constraints imposed by category contrast. Even within Experiment 1, we found systematic inconsistencies: by generating exemplars into unoccupied regions of the space, participants who learned an `XOR' category, composed of members that are widely distributed along both features and are positively correlated in space, tended to generate categories with an opposite (negative) correlation. More generally, PACKER's success over the hierarchical sampling model indicates that the emulation of distributional structure exerts only a limited influence in comparison to category contrast.
-
-Nonetheless, these classic effects are a core element of the phenomenology of creative generation, and it is worth noting that PACKER does not include any mechanisms explain them. Instead, through the development and evaluation of the PACKER model, we have sought to add new elements into such a phenomenology: specifically, the broad and strong influence of category contrast, and the interdependence between category location and distributional structure. It may be possible to combine the hierarchical sampling approach proposed by \cite{jern2013probabilistic} with PACKER's underlying claims to obtain a ``best of both worlds'' model, capable of explaining the role of contrast in creative generation, as well as the emulation of distributional structure. However, as noted in the introduction, the incorporation of category contrast is antithetical to the core principles of the hierarchical Bayesian approach. Thus, while such a model may provide an excellent fit to the data, its theoretical composition would be more or less of an amalgam, and thus it may not succeed in other areas of model evaluation (such as predicting and explaining novel phenomena).
-
-As it stands, however, PACKER's mathematical basis is subject to a wide variety of interpretations, leading to distinct views on the nature of creative generation. 
-%\nbcnote{That sounds like a good spot to include importance sampling}
-\jlanote{This is pretty disorganized at the moment. There's a lot of good in here though. Here's the structure I'd like to see. Please move and reorganize it into these subsections}
-
-
-Summary of results
-\subsection{Implications for creative cognition}
-more on the general theories/philosophy of creative cognition and what we bring to the table.
-\subsection{Contrast in categorization}
-More broad perspective of how this fits with categorization more broadly. Similar style model for explaining language/perceptual (phonemes and color) categories. Also, you should check on studies of how contrast affects categorization more broadly (i think there's some work on that).
-\subsection{Limitations and Future Directions}
-this is where the importance sampling connection will come in and will involve specifying the computational problem precisely. that hasn't been done yet for category generation and then perhaps to creativity more broadly.
 %discussion of color categories and how they evolve. how across cultures, they seem to maximize within-category similarity and minimize between-category simialrity
+
+Indeed, issues relating to the trade-off between within- and between-class similarity arise in a variety of domains. For example, \cite{regier2007} showed that the partitioning of color categories reflects such a trade-off in a psychological space -- colors are partitioned into groups with members that are viewed as highly similar to one another yet distinct from other colors. A similar trade-off can be observed in phoneme perception... \nbcnote {I got nothing there...}
+
+The above passages serve to demonstrate that the dual forces of within-class similarity and between-class contrast influence cognitive function in a wide variety of domains. The PACKER model is unique in that it extends this trade-off to the domain of creative generation, and allows us to begin to understand the processes involved in creative generation using our well-developed knowledge of human categorization.
+
+
+\subsection{Implications for Creative Cognition}
+
+A central focus of the creative cognition approach \citep{finke1992creative,smith1995creative} has been to explain acts of creativity in terms of the mental processes that are commonly studied in cognitive psychology and cognitive science. The PACKER model advances this goal by applying the well-understood representational and process assumptions of the exemplar view to the act of generating new categories. In doing so, the model offers an additional interpretation of many of the central findings within the literature on creative cognition. For example, perhaps the most foundational principle from this literature concerns the limiting influence of prior knowledge: individuals create new categories composed of features from existing classes, and what is created can be influenced drastically through the introduction of cues or examples \citep{marsh1999inadvertent,smith1993constraining}. In this paper, we have identified another important aspect of the constraining influence of prior knowledge: what is generated cannot be the same as what is already known. Our results demonstrate that this influence is concisely explained in terms of a trade-off between within-category similarity and between-category dissimilarity.
+
+Interestingly, the leading account within the creative cognition literature, the Path of Least Resistance account \citep{ward1994structured,ward1995s}, also explains generation in terms of an exemplar-based retrieval process. This account was designed to explain the creative generation of natural categories (e.g., new species of plants and animals) and as a result relies strongly on the hierarchical organization of these categories: individuals are thought to retrieve an example of the higher-level category being generated (e.g., \textit{bird} may be retrieved from the category \textit{animal}), and then systematically alter what was retrieved to make something new. As the PACKER model does not assume knowledge is hierarchically organized \citep[this is true of the exemplar view more boradly, see][]{murphy2016exemplar}, the model may be viewed as a formal instantiation of the Path of Least Resistance for application in a traditional artificial categorization domain (in which there is no established hierarchy of categories). PACKER's success in explaining generation within an artificial domain motivates future work exploring the nature of category contrast within a more naturalistic setting.
+
+
+\subsection{Limitations and Future Directions}
+\jlanote{this is where the importance sampling connection will come in and will involve specifying the computational problem precisely. that hasn't been done yet for category generation and then perhaps to creativity more broadly.}
+
+
+Although successful in explaining our results, PACKER does not provide a full account of what is known about category generation. Most notably, in this paper we have not evaluated the model's ability to explain the classic finding that generated categories tend to share distributional commonalities with previously learned categories \citep[see][]{jern2013probabilistic,ward1994structured}. While we successfully replicated this effect in Experiment 1, we also found that its influence was limited in comparison to the fundamental constraints imposed by category contrast. Even within Experiment 1, we found systematic inconsistencies: by generating exemplars into unoccupied regions of the space, participants who learned an `XOR' category, composed of members that are widely distributed along both features and are positively correlated in space, tended to generate categories with an opposite (negative) correlation. More generally, PACKER's success over the hierarchical sampling model indicates that the emulation of distributional structure exerts only a limited influence in comparison to category contrast.
+
+Nonetheless, these classic effects are a core element of the phenomenology of creative generation, and PACKER does not include any mechanisms explain them. Instead, through the development and evaluation of the PACKER model, we have sought to add new elements into such a phenomenology: specifically, the broad and strong influence of category contrast, and the interdependence between category location and distributional structure. It may be possible to combine the hierarchical sampling approach proposed by \cite{jern2013probabilistic} with PACKER's underlying claims to obtain a ``best of both worlds'' model, capable of explaining the role of contrast in creative generation, as well as the emulation of distributional structure. However, as noted in the introduction, the incorporation of category contrast is antithetical to the core principles of the hierarchical Bayesian approach. Thus, while such a model may provide an excellent fit to the data, its theoretical composition would be more or less of an amalgam, and thus it may not succeed in other areas of model evaluation (such as predicting and explaining novel phenomena).
+
+
+Although an overall goal of this work is to advance the study of creative thought by explaining generation through quantitative approaches, PACKER is not easily aligned with many of the myriad alternative theoretical viewpoints in the study of creativity \citep[see][]{kozbelt2010theories}. Instead, in this paper we have studied a highly complex behavior (creative generation) as it applies within a well-established domain (category learning). 
+
+
 
 \section{Conclusions}
 
