--- a/Manuscripts/cog-psych/citations.bib
+++ b/Manuscripts/cog-psych/citations.bib
@@ -63,6 +63,12 @@
  year = 2016
 }
 
+@article{finke1992creative,
+  title={Creative cognition: Theory, research, and applications},
+  author={Finke, Ronald A and Ward, Thomas B and Smith, Steven M},
+  year={1992},
+  publisher={MIT press Cambridge, MA}
+}
 
 @book{garner1974processing,
  author = "Garner, W. R.",
@@ -70,6 +76,28 @@
  publisher = "Erlbaum",
  address = "Potomac, MD",
  year = 1974
+}
+
+@article{goldstone1994influences,
+  title={Influences of categorization on perceptual discrimination.},
+  author={Goldstone, Robert L},
+  journal={Journal of Experimental Psychology: General},
+  volume={123},
+  number={2},
+  pages={178},
+  year={1994},
+  publisher={American Psychological Association}
+}
+
+@article{goldstone2001altering,
+  title={Altering object representations through category learning},
+  author={Goldstone, Robert L and Lippa, Yvonne and Shiffrin, Richard M},
+  journal={Cognition},
+  volume={78},
+  number={1},
+  pages={27--43},
+  year={2001},
+  publisher={Elsevier}
 }
 
 @incollection{goodman1972seven,
@@ -103,6 +131,18 @@
   pages={85--125},
   year={2013},
   publisher={Elsevier}
+}
+
+
+@incollection{kozbelt2010theories,
+  author={Kozbelt, Aaron and Beghetto, Ronald A and Runco, Mark A},
+  title={Theories of creativity},
+  editor={Kaufman, James C and Sternberg, Robert J},
+  booktitle={The Cambridge handbook of creativity},  
+  publisher="Cambridge University Press",
+  address="New York",
+  year={2010},
+  pages= "21-48",
 }
 
 @article{kruschke1992alcove,
@@ -211,6 +251,17 @@
   pages={207},
   year={1978},
   publisher={American Psychological Association}
+}
+
+@article{murphy2016exemplar,
+  title={Is there an exemplar theory of concepts?},
+  author={Murphy, Gregory L},
+  journal={Psychonomic bulletin \& Review},
+  volume={23},
+  number={4},
+  pages={1035--1042},
+  year={2016},
+  publisher={Springer}
 }
 
 @book{nersessian2008,
@@ -349,6 +400,13 @@
   year = {2010}
 }
 
+
+@book{smith1995creative,
+  title={The creative cognition approach},
+  author={Smith, Steven M and Ward, Thomas B and Finke, Ronald A},
+  year={1995},
+  publisher={MIT Press}
+}
 
 @article{smith1993constraining,
   title={Constraining effects of examples in a creative generation task},
