edits to creative cognition, future directions sections

--- a/Manuscripts/cog-psych/citations.bib
+++ b/Manuscripts/cog-psych/citations.bib
@@ -63,11 +63,23 @@
  year = 2016
 }
 
-@article{finke1992creative,
+@article{estes2002emergence,
+  title={The emergence of novel attributes in concept modification},
+  author={Estes, Zachary and Ward, Thomas B},
+  journal={Creativity Research Journal},
+  volume={14},
+  number={2},
+  pages={149--156},
+  year={2002},
+  publisher={Taylor \& Francis}
+}
+
+@book{finke1992creative,
   title={Creative cognition: Theory, research, and applications},
   author={Finke, Ronald A and Ward, Thomas B and Smith, Steven M},
   year={1992},
-  publisher={MIT press Cambridge, MA}
+  publisher={MIT press},
+  address={Cambridge, MA}
 }
 
 @book{garner1974processing,
@@ -187,32 +199,6 @@
 	Title = {Learning to perceive while perceiving to learn},
 	Year = {2003}}
 
-@article{regier2007,
-  author = {T. Regier and P. Kay and N. Khetarpal},
-  title = {Color naming reflects optimal partitions of color space},
-  journal = {Proceedings of the National Academy of Sciences},
-  year = {2007},
-  volume = {104},
-  number = {4},
-  pages = {1436--1441}
-}
-
-@book{wyszecki1967,
-  author = {G. Wyszecki and W. S. Stiles},
-  title = {Color Science},
-  publisher = {John Wiley},
-  address = {New York},
-  year = {1967}
-}
-
-@article{roschmervis1975,
-	Author = {E. Rosch and C. B. Mervis},
-	Journal = {Cognitive Psychology},
-	Pages = {573-605},
-	Title = {Family resemblances: Studies in the internal structure of categories},
-	Volume = {7},
-	Year = {1975}}
-
 
 @article{mack2013,
   author = {M. L. Mack and A. R. Preston and B. C. Love},
@@ -251,6 +237,28 @@
   pages={207},
   year={1978},
   publisher={American Psychological Association}
+}
+
+@article{mednick1962associative,
+  title={The associative basis of the creative process.},
+  author={Mednick, Sarnoff},
+  journal={Psychological review},
+  volume={69},
+  number={3},
+  pages={220},
+  year={1962},
+  publisher={American Psychological Association}
+}
+
+@article{murphy1988comprehending,
+  title={Comprehending complex concepts},
+  author={Murphy, Gregory L},
+  journal={Cognitive science},
+  volume={12},
+  number={4},
+  pages={529--562},
+  year={1988},
+  publisher={Elsevier}
 }
 
 @article{murphy2016exemplar,
@@ -313,6 +321,16 @@
   year = {2011}
 }
 
+@article{regier2007,
+  author = {T. Regier and P. Kay and N. Khetarpal},
+  title = {Color naming reflects optimal partitions of color space},
+  journal = {Proceedings of the National Academy of Sciences},
+  year = {2007},
+  volume = {104},
+  number = {4},
+  pages = {1436--1441}
+}
+
 @article{robbins1964empirical,
   title={The empirical Bayes approach to statistical decision problems},
   author={Robbins, Herbert},
@@ -322,6 +340,15 @@
   pages={1--20},
   year={1964},
   publisher={JSTOR}
+}
+
+@article{roschmervis1975,
+  Author = {E. Rosch and C. B. Mervis},
+  Journal = {Cognitive Psychology},
+  Pages = {573-605},
+  Title = {Family resemblances: Studies in the internal structure of categories},
+  Volume = {7},
+  Year = {1975}
 }
 
 @article{rosch1975cognitive,
@@ -405,7 +432,8 @@
   title={The creative cognition approach},
   author={Smith, Steven M and Ward, Thomas B and Finke, Ronald A},
   year={1995},
-  publisher={MIT Press}
+  publisher={MIT Press},
+  address={Cambridge, MA}
 }
 
 @article{smith1993constraining,
@@ -462,4 +490,12 @@
   pages={199--216},
   year={2002},
   publisher={Springer}
+}
+
+@book{wyszecki1967,
+  author = {G. Wyszecki and W. S. Stiles},
+  title = {Color Science},
+  publisher = {John Wiley},
+  address = {New York},
+  year = {1967}
 }
