--- a/Manuscripts/cog-psych/cogpsych.tex
+++ b/Manuscripts/cog-psych/cogpsych.tex
@@ -72,6 +72,8 @@ E-mail: austerweil@wisc.edu
 \doublespacing
 \section*{Abstract}
 
+The ability to creatively generate new concepts and ideas is among the most fascinating aspects of human cognition, but we do not have a strong understanding of the cognitive processes and representations underlying creative generation. In this paper, we study the generation of new categories using the empirical and quantitative toolkit of traditional artificial category learning. We report two experiments demonstrating that contrast between what is known and what is created is of fundamental importance in the creative process. We propose a novel, exemplar-based approach explaining our results, and compare the model's performance to two key alternatives. Our experiments and simulations demonstrate specifically how category contrast influences creative generation (category contrast), and how it can interact with other constraints in order to produce different types of creations. Our work also serves as a concrete example of how well-established and highly controlled experimental frameworks (such as those in the field of category learning) can be used to make progress in an intriguing yet understudied domain.
+
 
 
 \setlength\parindent{0.5in}
@@ -563,7 +565,7 @@ Finally, although an overall goal of this work is to advance the study of creati
 
 \section{Conclusions}
 
-
+The generation of new concepts and ideas is a highly interesting topic, but it is difficult to study in a controlled experimental environment. In this paper, we have provided such an examination of category generation as it applies within a traditional artificial categorization categorization experiment. Our experiments and simulations revealed a core constraint upon creative generation (category contrast), and showed how it can interact with other constraints in order to produce different types of creations. More generally, our work serves as a concrete example of how well-established and highly controlled experimental frameworks (such as those in the field of category learning) can be used to study a less well-defined topic, and how existing tools can be used to make progress in an intriguing yet understudied domain.
 
 
 \clearpage
