--- a/Manuscripts/cogsci-2017/paper.tex
+++ b/Manuscripts/cogsci-2017/paper.tex
@@ -51,8 +51,8 @@ Recent work has proposed and tested formal models to explain these observations.
 
 \begin{figure*}
     \begin{center}
-    \inputpgf{figs/}{example.spaces.pgf}
-    \caption{PACKER generation of a category `B' example, following exposure to one member of category `A' and one member of category `B'. \textit{(a)} Predictions based on contrast similarity only $\{\phi = -1$, $\gamma = 0\}$. \textit{(b)} Predictions based on target similarity only $\{\phi = 0$, $\gamma = 1\}$.  \textit{(c)} Predictions with both constraints considered $\{\phi = -1$, $\gamma = 1\}$.  }
+    \inputpgf{figs/}{packer-examples.pgf}
+    \caption{PACKER generation of a category `B' example, following exposure to one member of category `A' and category `B'. The panels differ in how the trade-off between within- and between-category similarity is managed (via the $\gamma$ parameter).}
     \label{fig:example-prob-spaces}
     \end{center}
 \end{figure*}
@@ -70,11 +70,18 @@ As in the GCM, the similarity between two examples, $s\left(x_i, x_j\right)$, is
   s\left(x_i,x_j\right) = \exp \left\{ -c \sum_{k}{ \left| x_{ik} - x_{jk} \right|}w_k \right\}
   \label{eq:similarity}
 \end{equation}
-where $w_k$ is the attention weighting of dimension $k$ ($w_k \geq 0$ and $\sum_k{w_k} = 1$), accounting for the relative importance of each dimension in similarity calculations, and $c$ ($c>0$) is a specificity parameter controlling the spread of exemplar generalization. For simplicity, our simulations will use uniform attention weights, except in our discussion of individual differences.  
+where $w_k$ is the attention weighting of dimension $k$ ($w_k \geq 0$ and $\sum_k{w_k} = 1$), accounting for the relative importance of each dimension in similarity calculations, and $c$ ($c>0$) is a specificity parameter controlling the spread of exemplar generalization. For simplicity, our simulations will use uniform attention weights, except when otherwise noted.  
 
-To generate a new example, the model considers both the similarity to examples from contrast categories as well as the similarity to examples (if any exist) in the target category. The aggregated similarity $a$ between generation candidate $y$ and stored exemplars $x$ is $a(y, x) = \sum_j{f(x_j) s(y, x_j)}$, where $f(x_j)$ is a function specifying the extent to which each exemplar contributes to the target category. For brevity, we abbreviate $f(x_j)$ as $f_j$. PACKER sets $f_j$ depending on exemplar $j$'s category membership: $f_j = \phi$ if $x_j$ is a member of a contrast category, and $f_j = \gamma$ if $x_j$ is a member of the target category. $\phi$ and $\gamma$ are free parameters ($-\infty \leq \phi, \gamma \leq \infty$) controlling the contribution of contrast- and target-category similarity, respectively (see Figure \ref{fig:example-prob-spaces}). Larger absolute values result in greater consideration of those exemplars, with values of 0 eliminating their effect. A negative value for $f_j$ produces a `repelling' effect (exemplars are less likely to be generated nearby $x_j$). Conversely, a positive value for $f_j$ produces an `attracting' effect (exemplars are more likely to be generated nearby $x_j$). 
+To generate a new example, the model considers both the similarity to examples from contrast categories as well as the similarity to examples (if any exist) in the target category. The aggregated similarity $a$ between generation candidate $y$ and stored exemplars $x$ is:
 
-PACKER's core proposal is that new categories should be different from existing categories, and same-category exemplars should be similar to one another. This is realized when $\phi \leq 0$, and $\gamma \geq 0$. Negative $\phi$ values encourage $y$ to be distant from the contrast category (as similarity to contrast category exemplars are subtracted during aggregation). Positive $\gamma$ values encourage $y$ to be close to other exemplars of the target category. When $|\phi| = \gamma$, the repulsion effect from contrast categories is equal to the attraction effect to the target category.
+\begin{equation}
+  a(y, x) = \sum_j{f(x_j) s(y, x_j)}
+  \label{eq:aggregation}
+\end{equation}
+\
+where $f(x_j)$ is a function specifying the extent to which each exemplar contributes to the generation. A negative value for $f(x_j)$ produces a `repelling' effect (items are less likely to be generated nearby $x_j$), and a positive value produces an `attracting' effect (items are more likely to be generated nearby $x_j$). When $f(x_j)=0$, the exemplar does not contribute to generation. 
+
+PACKER sets $f(x_j)$ depending on exemplar $j$'s category membership: $f(x_j) = \gamma$ if $x_j$ is a member of the target category, and $f(x_j) = 1 - \gamma$ if $x_j$ is a member of a contrast category. $\gamma$ is thus a free parameter ($0 \leq \gamma \leq 1$) controlling the trade-off between within- and between-category similarity. PACKER's core proposal is that new categories should be different from existing categories, and same-category exemplars should be similar to one another. This is realized when $\gamma$ assumes an intermediate value: For example, when $\gamma = 0.5$, $f(x_j) = 0.5$ for members of the target category and $f(x_j) = -0.5$ for members of other categories; thus, the model is likely to generate items that are similar to members of the target category but are not similar to members of other categories. However, more extreme values can be used to produce different behavior, see Figure \ref{fig:example-prob-spaces}.
 
 The probability that a given candidate $y$ will be generated is evaluated using an Exponentiated \citet{luce1977choice} choice rule. Candidates with greater values of $a$ are more likely to be generated than candidates with smaller values:
 \begin{equation}
@@ -94,17 +101,10 @@ Previous models of category generation focus on capturing the tendency for peopl
 
 
 \subsection{Copy-and-Tweak}
-The \textit{copy-and-tweak} model proposes that generation is a two-part process: First, learners retrieve an observation of the target class from memory, and then they tweak it to make something new. \citet{jern2013probabilistic} interpreted this proposal in terms of an exemplar model using the GCM \citep{nosofsky1984choice}. Formally, their model is equivalent to PACKER with $\{\phi = 0$, $\gamma = 1\}$ (see Figure \ref{fig:example-prob-spaces}). To allow for more flexible performance, and to explicitly formalize the `tweak' procedure, we slightly generalized their implementation.
+The \textit{copy-and-tweak} model proposes that generation is a two-part process: First, learners retrieve an observation of the target class from memory, and then they tweak it to make something new. \citet{jern2013probabilistic} interpreted this proposal in terms of an exemplar model using the GCM \citep{nosofsky1984choice}. Formally, their model is equivalent to PACKER with $\gamma = 1$ (see Figure \ref{fig:example-prob-spaces}). In this case,  $f(x_j) = 1$ for members of the target category and $f(x_j) = 0$ for members of other categories; thus, the model considers only target-class similarity, and when no members of the target class are known, the model generates items at random. Thus, in our work we provide simulations from the copy-and-tweak account as a variant of PACKER with a fixed $\gamma$ parameter.
 
-In our copy-and-tweak model, all observations $z$ from the target class are equally likely to be retrieved as the source. When there are no observations from the target class, the first exemplar is generated uniformly at random over stimulus space. After a source exemplar is retrieved, the similarity between generation candidates $y$ and the retrieved exemplar is computed as per Equation \ref{eq:similarity}. The model's goal is to generate an item that is similar to $z$, but does not exceed a given similarity threshold: The generated item should be copied, but tweaked. Formally, the probability that candidate exemplar $y$ will be generated based on a source exemplar $z$ is 
+Formalizing a model family where PACKER and copy-and-tweak are different parameterizations within the same framework is useful because comparison between the models thus provides a test of the explanatory value of the contrast mechanism: The account provided by copy-and-tweak will only equal that of PACKER if the contrast mechanism does not offer an advantage (i.e., if $\gamma < 1$ significantly improves model fits).
 
-\begin{equation}
-    p(y|z)  = \dfrac
-    { \exp \left\{\theta \cdot s(y,z) \right\} I\left(s(y,z) \leq \tau\right) }
-    {\sum_i{\exp \left\{ \theta \cdot s(y_i,z) \right\} I\left(s(y_i,z) \leq \tau\right)}} 
-\end{equation}
-% 
-where $\theta$ is a response determinism parameter, $\tau$ is the similarity threshold, and $I(\cdot)$ is the indicator function, which returns 1 when it is passed a true expression and 0 otherwise. So, $I\left(s(y,z) \leq \tau\right)$ is 1 when the candidate exemplar $y$ is tweaked "enough". When $\tau=1$, the threshold has no effect, and our model is equivalent to that of \citet{jern2013probabilistic}. To obtain predictions not depending on a given source example, the model's predictions can be aggregated over all possible sources: $p(y) = \sum_z{p(z)p(y|z)}$.
 
 
 \subsection{Hierarchical Sampling}
@@ -173,7 +173,7 @@ More generally, PACKER proposes that the probability a stimulus $y$ will be gene
 \end{figure}
 
 \subsubsection{Participants \& Materials}
-We recruited 122 participants from Amazon Mechanical Turk from the US equally assigned to each condition. Stimuli were squares varying in color (RGB 25--230) and size (3.0--5.8cm). The assignment of perceptual features (color, size) to axes of the domain space (x, y) was counterbalanced across participants.
+We recruited 122 participants from Amazon Mechanical Turk from the US equally assigned to each condition. Stimuli were squares varying in color (grayscale 9.8\%-90.2\%) and size (3.0--5.8cm). The assignment of perceptual features (color, size) to axes of the domain space (x, y) was counterbalanced across participants.
 
 
 \subsubsection{Procedure}
